<LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/solve_for"
            android:id="@+id/textView"
            android:textSize="20sp"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            >

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volts_short"
                android:id="@+id/button_volt"
                android:layout_weight="1"
                android:textSize="45sp"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amps_short"
                android:id="@+id/button_amps"
                android:layout_weight="1"
                android:textSize="45sp"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resistance_short"
                android:id="@+id/button_resistance"
                android:layout_weight="1"
                android:textSize="45sp"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watts_short"
                android:id="@+id/button_watts"
                android:layout_weight="1"
                android:textSize="45sp"/>
    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/textView2"/>

    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:stretchColumns="0,1">

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView-volts"
                    android:layout_gravity="left|center_vertical"
                    android:text="@string/volts"
                    android:layout_column="0"
                    />

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/editText-volts"
                    android:layout_column="1"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView-amps"
                    android:layout_gravity="left|center_vertical"
                    android:text="@string/amps"
                    android:layout_column="0"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/editText-amps"
                    android:layout_column="1"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView-resistance"
                    android:layout_gravity="left|center_vertical"
                    android:text="@string/resistance"
                    android:layout_column="0"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/editText-resistance"
                    android:layout_column="1"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView-watts"
                    android:layout_gravity="left|center_vertical"
                    android:text="@string/watts"
                    android:layout_column="0"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/editText-watts"
                    android:layout_column="1"/>
        </TableRow>

    </TableLayout>

</LinearLayout>