<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/aboutImage" android:src="@drawable/ic_launcher"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:paddingLeft="10dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/app_name"
                    android:id="@+id/aboutTitle"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/string_version"
                    android:id="@+id/aboutVersion" android:layout_gravity="left|center_vertical"
                    android:singleLine="false"/>
        </LinearLayout>
    </LinearLayout>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/about_new"
              android:id="@+id/textView" android:layout_gravity="center_horizontal"/>
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceSmall" android:text="@string/about_new_details"
              android:id="@+id/textView2"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/about_soon"
            android:id="@+id/aboutSoon" android:layout_gravity="center"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/about_soon_details"
            android:id="@+id/aboutSoon" android:layout_gravity="left|center_vertical"/>
    <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:padding="10dp"
            android:clickable="true">
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView" android:src="@drawable/gplus_32"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:text="@string/follow_us"
                    android:id="@+id/aboutFollow" android:layout_gravity="center_vertical"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>