<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/LinearLayout1"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_alignParentLeft="true"
              android:layout_alignParentRight="false"
              android:layout_alignParentTop="true"
              android:layout_centerInParent="true"
              android:layout_margin="0dp"
              android:orientation="vertical"
              tools:context=".MainActivity">

    <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <ToggleButton
                android:id="@+id/ToggleButton01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/buttons_off_30x30"
                android:minWidth="36dp"
                android:onClick="onClick"
                android:textColor="@android:color/white"
                android:textOff="@string/dip_sw_1"
                android:textOn="@string/dip_sw_1"
                android:textSize="30sp"
                android:typeface="monospace"/>

        <ToggleButton
                android:id="@+id/ToggleButton02"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/buttons_off_30x30"
                android:minWidth="36dp"
                android:onClick="onClick"
                android:textColor="@android:color/white"
                android:textOff="@string/dip_sw_2"
                android:textOn="@string/dip_sw_2"
                android:textSize="30sp"
                android:typeface="monospace"/>

        <ToggleButton
                android:id="@+id/ToggleButton03"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/buttons_off_30x30"
                android:minWidth="36dp"
                android:onClick="onClick"
                android:textColor="@android:color/white"
                android:textOff="@string/dip_sw_3"
                android:textOn="@string/dip_sw_3"
                android:textSize="30sp"
                android:typeface="monospace"/>

        <ToggleButton
                android:id="@+id/ToggleButton04"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/buttons_off_30x30"
                android:minWidth="36dp"
                android:onClick="onClick"
                android:textColor="@android:color/white"
                android:textOff="@string/dip_sw_4"
                android:textOn="@string/dip_sw_4"
                android:textSize="30sp"
                android:typeface="monospace"/>

        <ToggleButton
                android:id="@+id/ToggleButton05"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/buttons_off_30x30"
                android:minWidth="36dp"
                android:onClick="onClick"
                android:textColor="@android:color/white"
                android:textOff="@string/dip_sw_5"
                android:textOn="@string/dip_sw_5"
                android:textSize="30sp"
                android:typeface="monospace"/>

        <ToggleButton
                android:id="@+id/ToggleButton06"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/buttons_off_30x30"
                android:minWidth="36dp"
                android:onClick="onClick"
                android:textColor="@android:color/white"
                android:textOff="@string/dip_sw_6"
                android:textOn="@string/dip_sw_6"
                android:textSize="30sp"
                android:typeface="monospace"/>

        <ToggleButton
                android:id="@+id/ToggleButton07"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/buttons_off_30x30"
                android:minWidth="36dp"
                android:onClick="onClick"
                android:textColor="@android:color/white"
                android:textOff="@string/dip_sw_7"
                android:textOn="@string/dip_sw_7"
                android:textSize="30sp"
                android:typeface="monospace"/>

        <ToggleButton
                android:id="@+id/ToggleButton08"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/buttons_off_30x30"
                android:minWidth="36dp"
                android:onClick="onClick"
                android:textColor="@android:color/white"
                android:textOff="@string/dip_sw_8"
                android:textOn="@string/dip_sw_8"
                android:textSize="30sp"
                android:typeface="monospace"/>

        <ToggleButton
                android:id="@+id/ToggleButton09"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/buttons_off_30x30"
                android:minWidth="36dp"
                android:onClick="onClick"
                android:textColor="@android:color/white"
                android:textOff="@string/dip_sw_9"
                android:textOn="@string/dip_sw_9"
                android:textSize="30sp"
                android:typeface="monospace"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/LinearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/editText_Start"
                android:text="0"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginLeft="24dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_start"
                android:imeOptions="actionNone|flagNoExtractUi"
                android:inputType="number"
                android:lines="1"
                android:maxLength="3"
                android:textSize="30sp"
                android:typeface="monospace">

            <requestFocus/>
        </EditText>

        <EditText
                android:id="@+id/EditText_Span"
                android:text="0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_span"
                android:imeOptions="actionNone|flagNoExtractUi"
                android:inputType="number"
                android:lines="1"
                android:maxLength="3"
                android:textSize="30sp"
                android:typeface="monospace"/>

        <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/hint_clear"
                android:src="@android:drawable/ic_menu_close_clear_cancel"/>

    </LinearLayout>

    <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    </ListView>
</LinearLayout>