<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content">

    a
    <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="false"
            android:fontFamily="RobotoSlab-Regular.ttf"
            android:textSize="20sp"
            android:ems="4"
            android:layout_weight="1"/>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        <TextView
                android:id="@+id/ToggleButton01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/buttons_off_30x30"
                android:clickable="false"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="@string/dip_addr_1"
                android:textColor="@android:color/white"
                android:textIsSelectable="false"
                android:textSize="15sp"/>

        <TextView
                android:id="@+id/ToggleButton02"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/buttons_off_30x30"
                android:clickable="false"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="@string/dip_addr_2"
                android:textColor="@android:color/white"
                android:textIsSelectable="false"
                android:textSize="15sp"/>

        <TextView
                android:id="@+id/ToggleButton03"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/buttons_off_30x30"
                android:clickable="false"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="@string/dip_addr_3"
                android:textColor="@android:color/white"
                android:textIsSelectable="false"
                android:textSize="15sp"/>

        <TextView
                android:id="@+id/ToggleButton04"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/buttons_off_30x30"
                android:clickable="false"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="@string/dip_addr_4"
                android:textColor="@android:color/white"
                android:textIsSelectable="false"
                android:textSize="15sp"/>

        <TextView
                android:id="@+id/ToggleButton05"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/buttons_off_30x30"
                android:clickable="false"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="@string/dip_addr_5"
                android:textColor="@android:color/white"
                android:textIsSelectable="false"
                android:textSize="15sp"/>

        <TextView
                android:id="@+id/ToggleButton06"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/buttons_off_30x30"
                android:clickable="false"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="@string/dip_addr_6"
                android:textColor="@android:color/white"
                android:textIsSelectable="false"
                android:textSize="15sp"/>

        <TextView
                android:id="@+id/ToggleButton07"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/buttons_off_30x30"
                android:clickable="false"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="@string/dip_addr_7"
                android:textColor="@android:color/white"
                android:textIsSelectable="false"
                android:textSize="15sp"/>

        <TextView
                android:id="@+id/ToggleButton08"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/buttons_off_30x30"
                android:clickable="false"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="@string/dip_addr_8"
                android:textColor="@android:color/white"
                android:textIsSelectable="false"
                android:textSize="15sp"/>

        <TextView
                android:id="@+id/ToggleButton09"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/buttons_off_30x30"
                android:clickable="false"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="@string/dip_addr_9"
                android:textColor="@android:color/white"
                android:textIsSelectable="false"
                android:textSize="15sp"/>

    </LinearLayout>

</LinearLayout>